# LInuxSoftTut

./: CMakeLists.txt  LinuxSoftTUT.html  README.md  lin.cpp  main.cpp
